<resources>
    <string name="app_name">Units Converter</string>
    <string name="temperature">Temperature</string>
    <string name="length">Length</string>
    <string name="weight">Weight</string>
    <string name="speed">Speed</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="enter_input_value">Enter Input Value</string>
    <string name="to">TO</string>
    <string name="verify">Verify</string>
    <string name="temp">Temperature</string>
    <string name="reset">Reset</string>
    <string name="default_view">Default view</string>
</resources>