<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:id="@+id/property"
        android:layout_height="0sp"
        android:layout_weight="0.3"
        android:background="#00BCD4"
        android:text="@string/default_view"
        android:textSize="45sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:padding="50sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:id="@+id/view"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:id="@+id/spinner1"
                android:spinnerMode="dropdown"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/to"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="40sp"
                android:id="@+id/spinner2"
                android:layout_alignParentEnd="true"
                android:spinnerMode="dropdown"
                />
        </RelativeLayout>
        <EditText
            android:id="@+id/input"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:hint="@string/enter_input_value"
            />
        <EditText
            android:id="@+id/output"
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_marginTop="50sp"
            android:layout_gravity="center"
            android:hint="@string/enter_answer"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:text="@string/verify"
            android:backgroundTint="#00BCD4"
            android:id="@+id/verify"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="50sp"
            android:text="@string/reset"
            android:backgroundTint="#00BCD4"
            android:id="@+id/reset"/>
    </LinearLayout>
</LinearLayout>