<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E91E63"
    android:elevation="10sp"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textColor="#E8DCDC"
        android:textSize="40sp"
        android:textStyle="bold" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="20sp"
        android:layout_weight="8"
        android:columnCount="2"
        android:padding="10sp"
        android:rowCount="1">
        <androidx.cardview.widget.CardView
            android:id="@+id/Temperature"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="15sp"
            app:cardBackgroundColor="#E8DCDC"
            app:cardCornerRadius="15sp"
            app:cardElevation="10sp" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/temp"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temperature"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/Length"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginBottom="15sp"
            app:cardBackgroundColor="#E8DCDC"
            app:cardCornerRadius="15sp"
            app:cardElevation="10sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ruler"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_marginTop="20sp"
        android:layout_weight="8"
        android:columnCount="2"
        android:padding="10sp"
        android:rowCount="1">

    <androidx.cardview.widget.CardView
        android:id="@+id/Weight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        app:cardCornerRadius="15sp"
        app:cardElevation="10sp"
        app:cardBackgroundColor="#E8DCDC"
        android:layout_marginBottom="15sp"
        android:layout_marginRight="15sp"
        android:layout_marginLeft="15sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal|center_vertical">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/weight"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_gravity="center"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/Speed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            app:cardCornerRadius="15sp"
            app:cardElevation="10sp"
            app:cardBackgroundColor="#E8DCDC"
            android:layout_marginBottom="15sp"
            android:layout_marginRight="15sp"
            android:layout_marginLeft="15sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal|center_vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/speed"
                    android:layout_gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>

